--- a/nbs/05_generators.ipynb
+++ b/nbs/05_generators.ipynb
@@ -323,6 +323,7 @@
     }
    ],
    "source": [
+    "#|eval: false\n",
     "# First, let's check if there are any folders in our project\n",
     "subdirs = get_subdirectories()\n",
     "print(f\"Found {len(subdirs)} subdirectories in nbs/\")\n",
@@ -348,6 +349,7 @@
     }
    ],
    "source": [
+    "#|eval: false\n",
     "# Create a test folder to demonstrate the functionality\n",
     "test_folder = Path(\"test_folder\")\n",
     "if not test_folder.exists():\n",
@@ -413,6 +415,7 @@
     }
    ],
    "source": [
+    "#|eval: false\n",
     "# Generate a folder notebook for the test folder\n",
     "try:\n",
     "    nb_path = generate_folder_notebook(\n",
@@ -448,6 +451,7 @@
     }
    ],
    "source": [
+    "#|eval: false\n",
     "# Clean up test folder\n",
     "import shutil\n",
     "if test_folder.exists():\n",
