Add #| hide directive to create_folder_notebook cell.

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -23,6 +23,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "43ea37ca-3c6d-4d25-b62b-ba268710f0d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "from nbdev.showdoc import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "195dbc0b-9af5-4e88-aac4-4d2bde46862f",
    "metadata": {},
    "outputs": [],
