--- a/nbs/01_parsers.ipynb
+++ b/nbs/01_parsers.ipynb
@@ -23,6 +23,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "70547151-912d-4e78-a319-1f44073dabe1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "from nbdev.showdoc import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4bbe28fa-8726-4d2b-bdd8-af69a46bab82",
    "metadata": {},
    "outputs": [],
