--- a/nbs/02_tree.ipynb
+++ b/nbs/02_tree.ipynb
@@ -23,6 +23,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6a9c7196-470d-412c-94df-41ac990d53aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "from nbdev.showdoc import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f32ebcf7-f180-4876-810a-a15c9d8a32a9",
    "metadata": {},
    "outputs": [],
@@ -423,12 +434,12 @@
      "text": [
       "nbs/\n",
       "├── 00_core.ipynb            # Core utilities and data models for nbdev project overview generation\n",
-      "├── 01_parsers.ipynb\n",
+      "├── 01_parsers.ipynb         # Parse notebook metadata, content, and extract function/class signatures with docments\n",
       "├── 02_tree.ipynb            # Generate tree visualizations for nbdev project structure\n",
-      "├── 03_api_docs.ipynb\n",
-      "├── 04_dependencies.ipynb\n",
-      "├── 05_generators.ipynb\n",
-      "├── 06_cli.ipynb\n",
+      "├── 03_api_docs.ipynb        # Generate module overviews with formatted signatures for nbdev projects\n",
+      "├── 04_dependencies.ipynb    # Analyze cross-notebook imports and generate Mermaid.js dependency diagrams\n",
+      "├── 05_generators.ipynb      # Auto-generate folder_name.ipynb notebooks for nbdev project organization\n",
+      "├── 06_cli.ipynb             # CLI commands for nbdev project overview generation and analysis\n",
       "├── 07_api.ipynb\n",
       "└── index.ipynb              # Generate comprehensive overviews, API references, and project structure visualizations for nbdev projects to enhance developer and AI assistant understanding.\n"
      ]
