--- a/nbs/03_api_docs.ipynb
+++ b/nbs/03_api_docs.ipynb
@@ -23,6 +23,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4cf64a8b-c078-412f-b627-ad7ff2fa7ec1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "from nbdev.showdoc import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bd37e506-fba0-4426-a066-8db8016dd39b",
    "metadata": {},
    "outputs": [],
