--- a/nbs/04_dependencies.ipynb
+++ b/nbs/04_dependencies.ipynb
@@ -23,6 +23,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9a082717-b09f-4b85-8823-9fff856ee0cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "from nbdev.showdoc import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c8a7c790-6750-4264-a105-42f3a6c564e8",
    "metadata": {},
    "outputs": [],
@@ -363,7 +374,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 8 modules with 8 dependencies\n"
+      "Found 8 modules with 14 dependencies\n"
      ]
     }
    ],
@@ -385,12 +396,22 @@
      "text": [
       "\n",
       "api_docs depends on:\n",
-      "  - parsers: *\n",
       "  - tree: *\n",
       "  - core: *\n",
+      "  - parsers: *\n",
+      "\n",
+      "cli depends on:\n",
+      "  - tree: *\n",
+      "  - parsers: *\n",
+      "  - api_docs: *\n",
+      "  - dependencies: *\n",
       "\n",
       "dependencies depends on:\n",
+      "  - core: *\n",
       "  - parsers: *\n",
+      "\n",
+      "generators depends on:\n",
+      "  - tree: *\n",
       "  - core: *\n",
       "\n",
       "parsers depends on:\n",
@@ -432,18 +453,24 @@
       "    tree[tree<br/>Directory Tree Visualization]\n",
       "    api_docs[api_docs<br/>API Documentation Generation]\n",
       "    dependencies[dependencies<br/>Dependency Analysis and Visualization]\n",
-      "    05_generators[05_generators]\n",
-      "    06_cli[06_cli]\n",
+      "    generators[generators<br/>Auto-generation Utilities]\n",
+      "    cli[cli<br/>Command-Line Interface]\n",
       "    07_api[07_api]\n",
       "\n",
       "    parsers --> core\n",
       "    parsers --> tree\n",
       "    tree --> core\n",
-      "    api_docs --> parsers\n",
       "    api_docs --> tree\n",
       "    api_docs --> core\n",
-      "    dependencies --> parsers\n",
+      "    api_docs --> parsers\n",
       "    dependencies --> core\n",
+      "    dependencies --> parsers\n",
+      "    generators --> tree\n",
+      "    generators --> core\n",
+      "    cli --> tree\n",
+      "    cli --> parsers\n",
+      "    cli --> api_docs\n",
+      "    cli --> dependencies\n",
       "\n",
       "    classDef default fill:#f9f9f9,stroke:#333,stroke-width:2px\n",
       "```\n"
@@ -469,16 +496,16 @@
       "\n",
       "## Dependency Matrix\n",
       "\n",
-      "| Module | 05_generators | 06_cli | 07_api | api_docs | core | dependencies | parsers | tree |\n",
+      "| Module | 07_api | api_docs | cli | core | dependencies | generators | parsers | tree |\n",
       "|--------|----|----|----|----|----|----|----|----|\n",
-      "| 05_generators |   |   |   |   |   |   |   |   |\n",
-      "| 06_cli |   |   |   |   |   |   |   |   |\n",
       "| 07_api |   |   |   |   |   |   |   |   |\n",
-      "| api_docs |   |   |   |   | ✓ |   | ✓ | ✓ |\n",
+      "| api_docs |   |   |   | ✓ |   |   | ✓ | ✓ |\n",
+      "| cli |   | ✓ |   |   | ✓ |   | ✓ | ✓ |\n",
       "| core |   |   |   |   |   |   |   |   |\n",
-      "| dependencies |   |   |   |   | ✓ |   | ✓ |   |\n",
-      "| parsers |   |   |   |   | ✓ |   |   | ✓ |\n",
-      "| tree |   |   |   |   | ✓ |   |   |   |\n"
+      "| dependencies |   |   |   | ✓ |   |   | ✓ |   |\n",
+      "| generators |   |   |   | ✓ |   |   |   | ✓ |\n",
+      "| parsers |   |   |   | ✓ |   |   |   | ✓ |\n",
+      "| tree |   |   |   | ✓ |   |   |   |   |\n"
      ]
     }
    ],
