--- a/nbs/05_generators.ipynb
+++ b/nbs/05_generators.ipynb
@@ -23,6 +23,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3e6f56e5-f91e-4399-911d-e0f278dd9044",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "from nbdev.showdoc import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a4a6a519-eb69-47c8-b10d-2b5fd43ef494",
    "metadata": {},
    "outputs": [],
@@ -50,11 +61,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f9b4bc7-21a2-40d9-8560-ca061915c391",
+   "id": "1a10b10e-76fb-415f-bf5b-2d22fc5c710c",
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
+    "#| hide\n",
     "def create_folder_notebook(folder_path: Path,           # Path to folder\n",
     "                          title: str,                   # Notebook title\n",
     "                          description: str              # Folder description\n",
@@ -71,7 +83,7 @@
     "    \n",
     "    # Default export cell\n",
     "    export_cell = mk_cell(\n",
-    "        f\"#| default_exp {folder_path.name}.__init__\",\n",
+    "        \"\",\n",
     "        cell_type='code'\n",
     "    )\n",
     "    cells.append(export_cell)\n",
@@ -118,6 +130,16 @@
     "    cells.append(export_final_cell)\n",
     "    \n",
     "    return cells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f9b4bc7-21a2-40d9-8560-ca061915c391",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide"
    ]
   },
   {
@@ -392,7 +414,7 @@
       "> Testing folder notebook generation\n",
       "\n",
       "Cell 2 (code):\n",
-      "#| default_exp test_folder.__init__\n",
+      "\n",
       "\n",
       "Cell 3 (code):\n",
       "#| export\n",
