--- a/nbs/06_cli.ipynb
+++ b/nbs/06_cli.ipynb
@@ -23,6 +23,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f5c13c7a-a66f-4eeb-8d6e-5b683274f567",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "from nbdev.showdoc import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bcb879a8-b8c1-4679-8c14-0aa0e9dd7c24",
    "metadata": {},
    "outputs": [],
