Add automated approach for updating index.ipynb with module overviews.

--- a/nbs/04_dependencies.ipynb
+++ b/nbs/04_dependencies.ipynb
@@ -89,11 +89,17 @@
     "    modules: Dict[str, ModuleInfo] = field(default_factory=dict)  # Module name -> ModuleInfo\n",
     "    dependencies: List[ModuleDependency] = field(default_factory=list)  # All dependencies\n",
     "    \n",
-    "    def add_module(self, module: ModuleInfo):  # Add a module to the graph\n",
+    "    def add_module(\n",
+    "        self,\n",
+    "        module: ModuleInfo  # TODO: Add description\n",
+    "    ): # Add a module to the graph - TODO: Add type hint\n",
     "        \"Add a module to the dependency graph\"\n",
     "        self.modules[module.name] = module\n",
     "    \n",
-    "    def add_dependency(self, dep: ModuleDependency):  # Add a dependency\n",
+    "    def add_dependency(\n",
+    "        self,\n",
+    "        dep: ModuleDependency  # TODO: Add description\n",
+    "    ): # Add a dependency - TODO: Add type hint\n",
     "        \"Add a dependency to the graph\"\n",
     "        self.dependencies.append(dep)\n",
     "    \n",
