--- a/nbs/06_cli.ipynb
+++ b/nbs/06_cli.ipynb
@@ -66,7 +66,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def tree_cmd(args):                                     # Command line arguments\n",
+    "def tree_cmd(\n",
+    "    args  # TODO: Add type hint and description\n",
+    "): # Command line arguments - TODO: Add type hint\n",
     "    \"Generate tree visualization for nbdev project\"\n",
     "    # Get project path\n",
     "    path = Path(args.path) if args.path else None\n",
@@ -113,7 +115,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def api_cmd(args):                                      # Command line arguments\n",
+    "def api_cmd(\n",
+    "    args  # TODO: Add type hint and description\n",
+    "): # Command line arguments - TODO: Add type hint\n",
     "    \"Generate API documentation for nbdev project\"\n",
     "    # Get project path\n",
     "    path = Path(args.path) if args.path else None\n",
@@ -168,7 +172,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def deps_cmd(args):                                     # Command line arguments\n",
+    "def deps_cmd(\n",
+    "    args  # TODO: Add type hint and description\n",
+    "): # Command line arguments - TODO: Add type hint\n",
     "    \"Analyze and visualize module dependencies\"\n",
     "    # Get project path\n",
     "    path = Path(args.path) if args.path else None\n",
@@ -238,7 +244,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def overview_cmd(args):                                 # Command line arguments\n",
+    "def overview_cmd(\n",
+    "    args  # TODO: Add type hint and description\n",
+    "): # Command line arguments - TODO: Add type hint\n",
     "    \"Generate complete project overview\"\n",
     "    # Get project path\n",
     "    path = Path(args.path) if args.path else None\n",
@@ -282,6 +290,55 @@
   },
   {
    "cell_type": "markdown",
+   "id": "85efb33f-5c51-46b5-8b01-5d07547bbc09",
+   "metadata": {},
+   "source": [
+    "## Update Index Command"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "kxkeubl7yui",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def update_index_cmd(\n",
+    "    args  # TODO: Add type hint and description\n",
+    "): # Command line arguments - TODO: Add type hint\n",
+    "    \"Update index.ipynb with module documentation\"\n",
+    "    # Get index path\n",
+    "    index_path = Path(args.index) if args.index else None\n",
+    "    \n",
+    "    try:\n",
+    "        update_index_module_docs(index_path)\n",
+    "        \n",
+    "        # Get the actual path that was updated\n",
+    "        if index_path is None:\n",
+    "            cfg = get_config()\n",
+    "            index_path = cfg.nbs_path / \"index.ipynb\"\n",
+    "        \n",
+    "        print(f\"Successfully updated {index_path} with module documentation\")\n",
+    "        \n",
+    "        if args.commit:\n",
+    "            # Stage and commit the changes\n",
+    "            import subprocess\n",
+    "            try:\n",
+    "                subprocess.run(['git', 'add', str(index_path)], check=True)\n",
+    "                subprocess.run(['git', 'commit', '-m', 'Update index.ipynb module documentation'], check=True)\n",
+    "                print(\"Changes committed to git\")\n",
+    "            except subprocess.CalledProcessError as e:\n",
+    "                print(f\"Git operations failed: {e}\", file=sys.stderr)\n",
+    "                sys.exit(1)\n",
+    "                \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error updating index: {e}\", file=sys.stderr)\n",
+    "        sys.exit(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e464ac76-1676-4f77-a7b2-c128a0b9c32a",
    "metadata": {},
    "source": [
@@ -296,7 +353,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def main():\n",
+    "def main(\n",
+    "): # TODO: Add type hint\n",
     "    \"Main CLI entry point for nbdev-overview\"\n",
     "    parser = argparse.ArgumentParser(\n",
     "        prog='nbdev-overview',\n",
@@ -341,6 +399,12 @@
     "    overview_parser.add_argument('--all', action='store_true', help='Include all items in API docs')\n",
     "    overview_parser.add_argument('-o', '--output', help='Output file path')\n",
     "    overview_parser.set_defaults(func=overview_cmd)\n",
+    "    \n",
+    "    # Update index command\n",
+    "    update_parser = subparsers.add_parser('update-index', help='Update index.ipynb with module documentation')\n",
+    "    update_parser.add_argument('--index', help='Path to index.ipynb (defaults to nbs/index.ipynb)')\n",
+    "    update_parser.add_argument('--commit', action='store_true', help='Commit changes to git')\n",
+    "    update_parser.set_defaults(func=update_index_cmd)\n",
     "    \n",
     "    # Parse arguments\n",
     "    args = parser.parse_args()\n",
