--- a/nbs/01_parsers.ipynb
+++ b/nbs/01_parsers.ipynb
@@ -386,7 +386,7 @@
    "source": [
     "#| export\n",
     "def parse_code_cell(cell: Dict[str, Any]                       # Notebook code cell\n",
-    "                   ) -> Tuple[List[FunctionInfo], List[ClassInfo], List[VariableInfo], List[str]]:\n",
+    "                   ) -> Tuple[List[FunctionInfo], List[ClassInfo], List[VariableInfo], List[str]]:  # TODO: Add return description\n",
     "    \"Parse a notebook code cell for functions, classes, variables, and imports\"\n",
     "    source = get_cell_source(cell)\n",
     "    source_lines = source.split('\\n')\n",
