--- a/nbs/03_api_docs.ipynb
+++ b/nbs/03_api_docs.ipynb
@@ -47,7 +47,11 @@
     "from cjm_nbdev_overview.parsers import *\n",
     "from cjm_nbdev_overview.tree import *\n",
     "from dataclasses import dataclass\n",
-    "import textwrap"
+    "import textwrap\n",
+    "\n",
+    "from execnb.nbio import read_nb, write_nb, mk_cell, new_nb\n",
+    "from fastcore.xtras import Path\n",
+    "import re"
    ]
   },
   {
@@ -302,6 +306,132 @@
     "            continue\n",
     "    \n",
     "    return '\\n'.join(lines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70d36c1e-d89a-4fcf-86c4-68fede92906f",
+   "metadata": {},
+   "source": [
+    "## Index Update Function\n",
+    "\n",
+    "The `update_index_module_docs` function can automatically update your project's index.ipynb with module documentation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "lmr82ynru4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def update_index_module_docs(index_path: Path = None,   # Path to index.ipynb (defaults to nbs/index.ipynb)\n",
+    "                           start_marker: str = \"## Module Overview\",  # Marker to identify module docs section\n",
+    "                           end_marker: str = \"## \",     # Next section marker\n",
+    "                           ) -> None:                    # Updates index.ipynb in place\n",
+    "    \"Update the module documentation section in index.ipynb\"\n",
+    "    if index_path is None:\n",
+    "        cfg = get_config()\n",
+    "        index_path = cfg.nbs_path / \"index.ipynb\"\n",
+    "    \n",
+    "    # Read the existing notebook\n",
+    "    nb = read_nb(index_path)\n",
+    "    \n",
+    "    # Find or create the module overview section\n",
+    "    module_section_idx = None\n",
+    "    end_section_idx = None\n",
+    "    \n",
+    "    for i, cell in enumerate(nb.cells):\n",
+    "        if cell.cell_type == 'markdown':\n",
+    "            source = cell.source\n",
+    "            # Check if this is the module overview section\n",
+    "            if start_marker in source:\n",
+    "                module_section_idx = i\n",
+    "            # Check if we've reached the next section after module overview\n",
+    "            elif module_section_idx is not None and source.strip().startswith(end_marker):\n",
+    "                end_section_idx = i\n",
+    "                break\n",
+    "    \n",
+    "    # Get all notebooks and parse them\n",
+    "    notebooks = get_notebook_files(index_path.parent, recursive=True)\n",
+    "    module_cells = []\n",
+    "    \n",
+    "    # Create the module overview header cell\n",
+    "    header_cell = mk_cell(f\"{start_marker}\\n\\nDetailed documentation for each module in the project:\", \n",
+    "                         cell_type='markdown')\n",
+    "    module_cells.append(header_cell)\n",
+    "    \n",
+    "    # Sort notebooks by their numeric prefix if they have one\n",
+    "    def sort_key(\n",
+    "        nb_path  # TODO: Add type hint and description\n",
+    "    ): # TODO: Add type hint\n",
+    "        \"TODO: Add function description\"\n",
+    "        match = re.match(r'^(\\d+)', nb_path.stem)\n",
+    "        if match:\n",
+    "            return (int(match.group(1)), nb_path.stem)\n",
+    "        return (999, nb_path.stem)  # Put non-numbered notebooks at the end\n",
+    "    \n",
+    "    sorted_notebooks = sorted(notebooks, key=sort_key)\n",
+    "    \n",
+    "    # Generate overview for each module\n",
+    "    for nb_path in sorted_notebooks:\n",
+    "        # Skip index notebooks\n",
+    "        if nb_path.stem in ['index', '00_index']:\n",
+    "            continue\n",
+    "            \n",
+    "        try:\n",
+    "            module_info = parse_notebook(nb_path)\n",
+    "            \n",
+    "            # Only include if it has exported content\n",
+    "            has_exports = any([\n",
+    "                any(f.is_exported for f in module_info.functions),\n",
+    "                any(c.is_exported for c in module_info.classes),\n",
+    "                any(v.is_exported for v in module_info.variables)\n",
+    "            ])\n",
+    "            \n",
+    "            if has_exports:\n",
+    "                overview_md = generate_module_overview(module_info)\n",
+    "                overview_cell = mk_cell(overview_md, cell_type='markdown')\n",
+    "                module_cells.append(overview_cell)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error parsing {nb_path}: {e}\")\n",
+    "            continue\n",
+    "    \n",
+    "    # Now update the notebook\n",
+    "    if module_section_idx is not None:\n",
+    "        # Remove existing module documentation cells\n",
+    "        if end_section_idx is not None:\n",
+    "            # Remove cells from module_section_idx to end_section_idx (exclusive)\n",
+    "            del nb.cells[module_section_idx:end_section_idx]\n",
+    "        else:\n",
+    "            # Remove from module_section_idx to end of notebook\n",
+    "            del nb.cells[module_section_idx:]\n",
+    "        \n",
+    "        # Insert new module cells\n",
+    "        for i, cell in enumerate(module_cells):\n",
+    "            nb.cells.insert(module_section_idx + i, cell)\n",
+    "    else:\n",
+    "        # No module overview section found, append it\n",
+    "        for cell in module_cells:\n",
+    "            nb.cells.append(cell)\n",
+    "    \n",
+    "    # Write the updated notebook\n",
+    "    write_nb(nb, index_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "lph2ljlbhej",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: Update the index.ipynb with module documentation\n",
+    "# update_index_module_docs()  # This will update nbs/index.ipynb\n",
+    "\n",
+    "# Or specify a custom path:\n",
+    "# update_index_module_docs(Path(\"../other_project/nbs/index.ipynb\"))"
    ]
   },
   {
