Fix the update_index_module_docs function to properly replace existing Module Overview sections.

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -280,233 +280,6 @@
     "\n",
     "```python\n",
     "def parse_code_cell(cell: Dict[str, Any]                       # Notebook code cell\n",
-    "                   ) -> Tuple[List[FunctionInfo], List[ClassInfo], List[VariableInfo], List[str]]\n",
-    "    \"Parse a notebook code cell for functions, classes, variables, and imports\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def parse_notebook(path: Path                           # Path to notebook\n",
-    "                  ) -> ModuleInfo:                      # Module information\n",
-    "    \"Parse a notebook file for module information\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def parse_python_file(path: Path                        # Path to Python file\n",
-    "                     ) -> ModuleInfo:                   # Module information\n",
-    "    \"Parse a Python file for module information\"\n",
-    "```\n",
-    "\n",
-    "#### Classes\n",
-    "\n",
-    "```python\n",
-    "@dataclass\n",
-    "class FunctionInfo:\n",
-    "    \"Information about a function\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "@dataclass\n",
-    "class ClassInfo:\n",
-    "    \"Information about a class\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "@dataclass\n",
-    "class VariableInfo:\n",
-    "    \"Information about a module-level variable\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "@dataclass\n",
-    "class ModuleInfo:\n",
-    "    \"Information about a module (notebook or Python file)\"\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Directory Tree Visualization (`02_tree.ipynb`)\n",
-    "> Generate tree visualizations for nbdev project structure\n",
-    "\n",
-    "#### Functions\n",
-    "\n",
-    "```python\n",
-    "def generate_tree_lines(path: Path,                         # Directory to visualize\n",
-    "                       prefix: str = \"\",                    # Line prefix for tree structure\n",
-    "                       is_last: bool = True,                # Is this the last item in parent\n",
-    "                       show_notebooks_only: bool = False,   # Only show notebooks, not directories\n",
-    "                       max_depth: Optional[int] = None,     # Maximum depth to traverse\n",
-    "                       current_depth: int = 0               # Current depth in traversal\n",
-    "                       ) -> List[str]:                      # Lines of tree output\n",
-    "    \"Generate tree visualization lines for a directory\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def generate_tree(path: Path = None,                    # Directory to visualize (defaults to nbs_path)\n",
-    "                 show_notebooks_only: bool = False,     # Only show notebooks, not directories\n",
-    "                 max_depth: Optional[int] = None        # Maximum depth to traverse\n",
-    "                 ) -> str:                              # Tree visualization as string\n",
-    "    \"Generate a tree visualization for a directory\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def extract_notebook_info(path: Path                    # Path to notebook file\n",
-    "                         ) -> NotebookInfo:             # Notebook information\n",
-    "    \"Extract title and description from a notebook\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def generate_tree_with_descriptions(path: Path = None,              # Directory to visualize\n",
-    "                                   show_counts: bool = True,        # Show notebook counts for directories\n",
-    "                                   max_depth: Optional[int] = None  # Maximum depth to traverse\n",
-    "                                   ) -> str:                        # Tree with descriptions\n",
-    "    \"Generate tree visualization with descriptions from notebooks\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def _generate_nested_tree_lines(path: Path,                         # Directory to process\n",
-    "                               prefix: str = \"\",                    # Line prefix\n",
-    "                               show_counts: bool = True,            # Show notebook counts\n",
-    "                               max_depth: Optional[int] = None,     # Maximum depth\n",
-    "                               current_depth: int = 0               # Current depth\n",
-    "                               ) -> List[str]:                      # Tree lines\n",
-    "    \"Generate tree lines for nested directory structure\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def generate_subdirectory_tree(subdir_path: Path,               # Path to subdirectory\n",
-    "                              show_descriptions: bool = True    # Include notebook descriptions\n",
-    "                              ) -> str:                         # Tree visualization\n",
-    "    \"Generate tree visualization for a specific subdirectory showing all notebooks\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def _generate_subdirectory_lines(item: Path,                    # Item to process\n",
-    "                                prefix: str,                    # Line prefix\n",
-    "                                is_last: bool,                  # Is last item\n",
-    "                                is_dir: bool,                   # Is directory\n",
-    "                                show_descriptions: bool,        # Show descriptions\n",
-    "                                depth: int                      # Current depth\n",
-    "                                ) -> List[str]:                 # Tree lines\n",
-    "    \"Generate tree lines for subdirectory visualization\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def get_tree_summary(path: Path = None              # Directory to analyze\n",
-    "                    ) -> str:                       # Summary string\n",
-    "    \"Get summary statistics for notebooks in directory tree\"\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Module Overview\n",
-    "\n",
-    "Detailed documentation for each module in the project:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Core Utilities (`00_core.ipynb`)\n",
-    "> Core utilities and data models for nbdev project overview generation\n",
-    "\n",
-    "#### Functions\n",
-    "\n",
-    "```python\n",
-    "def get_notebook_files(path: Path = None,           # Directory to search (defaults to nbs_path)\n",
-    "                      recursive: bool = True        # Search subdirectories\n",
-    "                      ) -> List[Path]:              # List of notebook paths\n",
-    "    \"Get all notebook files in a directory\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def get_subdirectories(path: Path = None,           # Directory to search (defaults to nbs_path)\n",
-    "                      recursive: bool = False       # Include all nested subdirectories\n",
-    "                      ) -> List[Path]:              # List of directory paths\n",
-    "    \"Get subdirectories in a directory\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def read_notebook(path: Path                    # Path to notebook file\n",
-    "                 ) -> Dict[str, Any]:           # Notebook content as dict\n",
-    "    \"Read a notebook file and return its content\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def get_cell_source(cell: Dict[str, Any]        # Notebook cell\n",
-    "                   ) -> str:                    # Cell source as string\n",
-    "    \"Get source from a notebook cell\"\n",
-    "```\n",
-    "\n",
-    "#### Classes\n",
-    "\n",
-    "```python\n",
-    "@dataclass\n",
-    "class NotebookInfo:\n",
-    "    \"Information about a single notebook\"\n",
-    "    \n",
-    "    def relative_path(self) -> Path:       # Path relative to nbs directory\n",
-    "        \"Get path relative to nbs directory\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "@dataclass\n",
-    "class DirectoryInfo:\n",
-    "    \"Information about a directory in the nbs folder\"\n",
-    "    \n",
-    "    def total_notebook_count(self) -> int:          # Total notebooks including subdirs\n",
-    "        \"Get total notebook count including subdirectories\"\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Notebook and Module Parsing (`01_parsers.ipynb`)\n",
-    "> Parse notebook metadata, content, and extract function/class signatures with docments\n",
-    "\n",
-    "#### Functions\n",
-    "\n",
-    "```python\n",
-    "def extract_docments_signature(node: ast.FunctionDef,          # AST function node\n",
-    "                              source_lines: List[str]          # Source code lines\n",
-    "                              ) -> str:                        # Function signature\n",
-    "    \"Extract function signature with docments-style comments\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def parse_function(node: ast.FunctionDef,               # AST function node\n",
-    "                  source_lines: List[str],              # Source code lines\n",
-    "                  is_exported: bool = False             # Has #| export\n",
-    "                  ) -> FunctionInfo:                    # Function information\n",
-    "    \"Parse a function definition from AST\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def parse_class(node: ast.ClassDef,                    # AST class node\n",
-    "               source_lines: List[str],                # Source code lines\n",
-    "               is_exported: bool = False               # Has #| export\n",
-    "               ) -> ClassInfo:                         # Class information\n",
-    "    \"Parse a class definition from AST\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def parse_variable(node: Union[ast.Assign, ast.AnnAssign],    # AST assignment node\n",
-    "                  source_lines: List[str],                     # Source code lines\n",
-    "                  is_exported: bool = False                    # Has #| export\n",
-    "                  ) -> List[VariableInfo]:                     # Variable information\n",
-    "    \"Parse variable assignments from AST\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def parse_code_cell(cell: Dict[str, Any]                       # Notebook code cell\n",
     "                   ) -> Tuple[List[FunctionInfo], List[ClassInfo], List[VariableInfo], List[str]]:  # TODO: Add return description\n",
     "    \"Parse a notebook code cell for functions, classes, variables, and imports\"\n",
     "```\n",
@@ -667,6 +440,13 @@
     "                            show_all: bool = False      # Show all items including private\n",
     "                            ) -> str:                   # Full API documentation\n",
     "    \"Generate API documentation for all modules in a project\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def update_index_module_docs(index_path: Path = None,   # Path to index.ipynb (defaults to nbs/index.ipynb)\n",
+    "                           start_marker: str = \"## Module Overview\",  # Marker to identify module docs section\n",
+    "                           ) -> None:                    # Updates index.ipynb in place\n",
+    "    \"Update the module documentation section in index.ipynb\"\n",
     "```\n"
    ]
   },
