--- a/nbs/03_api_docs.ipynb
+++ b/nbs/03_api_docs.ipynb
@@ -328,7 +328,6 @@
     "#| export\n",
     "def update_index_module_docs(index_path: Path = None,   # Path to index.ipynb (defaults to nbs/index.ipynb)\n",
     "                           start_marker: str = \"## Module Overview\",  # Marker to identify module docs section\n",
-    "                           end_marker: str = \"## \",     # Next section marker\n",
     "                           ) -> None:                    # Updates index.ipynb in place\n",
     "    \"Update the module documentation section in index.ipynb\"\n",
     "    if index_path is None:\n",
@@ -338,20 +337,24 @@
     "    # Read the existing notebook\n",
     "    nb = read_nb(index_path)\n",
     "    \n",
-    "    # Find or create the module overview section\n",
-    "    module_section_idx = None\n",
-    "    end_section_idx = None\n",
+    "    # Find all module overview sections and remove them\n",
+    "    cells_to_keep = []\n",
+    "    skip_until_next_section = False\n",
     "    \n",
     "    for i, cell in enumerate(nb.cells):\n",
     "        if cell.cell_type == 'markdown':\n",
-    "            source = cell.source\n",
-    "            # Check if this is the module overview section\n",
-    "            if start_marker in source:\n",
-    "                module_section_idx = i\n",
-    "            # Check if we've reached the next section after module overview\n",
-    "            elif module_section_idx is not None and source.strip().startswith(end_marker):\n",
-    "                end_section_idx = i\n",
-    "                break\n",
+    "            source = cell.source.strip()\n",
+    "            # Check if this is the start of a module overview section\n",
+    "            if source.startswith(start_marker):\n",
+    "                skip_until_next_section = True\n",
+    "                continue\n",
+    "            # Check if we've reached a new top-level section (## but not ### or more)\n",
+    "            elif skip_until_next_section and re.match(r'^##\\s+(?!#)', source) and not source.startswith(start_marker):\n",
+    "                skip_until_next_section = False\n",
+    "        \n",
+    "        # Keep the cell if we're not in a module overview section\n",
+    "        if not skip_until_next_section:\n",
+    "            cells_to_keep.append(cell)\n",
     "    \n",
     "    # Get all notebooks and parse them\n",
     "    notebooks = get_notebook_files(index_path.parent, recursive=True)\n",
@@ -363,10 +366,7 @@
     "    module_cells.append(header_cell)\n",
     "    \n",
     "    # Sort notebooks by their numeric prefix if they have one\n",
-    "    def sort_key(\n",
-    "        nb_path  # TODO: Add type hint and description\n",
-    "    ): # TODO: Add type hint\n",
-    "        \"TODO: Add function description\"\n",
+    "    def sort_key(nb_path):\n",
     "        match = re.match(r'^(\\d+)', nb_path.stem)\n",
     "        if match:\n",
     "            return (int(match.group(1)), nb_path.stem)\n",
@@ -398,23 +398,8 @@
     "            print(f\"Error parsing {nb_path}: {e}\")\n",
     "            continue\n",
     "    \n",
-    "    # Now update the notebook\n",
-    "    if module_section_idx is not None:\n",
-    "        # Remove existing module documentation cells\n",
-    "        if end_section_idx is not None:\n",
-    "            # Remove cells from module_section_idx to end_section_idx (exclusive)\n",
-    "            del nb.cells[module_section_idx:end_section_idx]\n",
-    "        else:\n",
-    "            # Remove from module_section_idx to end of notebook\n",
-    "            del nb.cells[module_section_idx:]\n",
-    "        \n",
-    "        # Insert new module cells\n",
-    "        for i, cell in enumerate(module_cells):\n",
-    "            nb.cells.insert(module_section_idx + i, cell)\n",
-    "    else:\n",
-    "        # No module overview section found, append it\n",
-    "        for cell in module_cells:\n",
-    "            nb.cells.append(cell)\n",
+    "    # Rebuild the notebook with the new module overview at the end\n",
+    "    nb.cells = cells_to_keep + module_cells\n",
     "    \n",
     "    # Write the updated notebook\n",
     "    write_nb(nb, index_path)"
